CleanUp + fixing deletion of "state"